--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
   run_pull:
     name: run pull
     runs-on: ubuntu-latest
+    environment: prd
     
     steps:
     - name: install ssh keys
