--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
     "epgp_base_gp": 0,
     "epgp_decay_base_gp": 0,
     "database_host": "$DB_HOST",
-    "database_port": $DB_PORT,
+    "database_port": "$DB_PORT",
     "database_user": "$DB_USER",
     "database_password": "$DB_PASSWORD",
     "database_name": "$DB_NAME",
