--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && if [ ! -d directory ]; then git clone ${{ secrets.REPO_URL }} bot fi && exit"
     - name: connect and pull
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }}/bot && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
+    - name: debug
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "echo '.discord_bot_token = "${{ secrets.DISCORD_BOT_TOKEN }}" | .discord_server_id = "${{ secrets.DISCORD_SERVER_ID }}" | .database_host = "${{ secrets.DB_HOST }}" | .database_port = ("${{ secrets.DB_PORT }}" | tonumber) | .database_user = "${{ secrets.DB_USER }}" | .database_password = "${{ secrets.DB_PASSWORD }}" | .database_name = "${{ secrets.DB_NAME }}"' > ~/test.txt && exit"
     - name: replace config variables
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "jq '.discord_bot_token = "${{ secrets.DISCORD_BOT_TOKEN }}" | .discord_server_id = "${{ secrets.DISCORD_SERVER_ID }}" | .database_host = "${{ secrets.DB_HOST }}" | .database_port = ("${{ secrets.DB_PORT }}" | tonumber) | .database_user = "${{ secrets.DB_USER }}" | .database_password = "${{ secrets.DB_PASSWORD }}" | .database_name = "${{ secrets.DB_NAME }}"' ${{ secrets.WORK_DIR }}/bot/config.json && exit"
     - name: cleanup
