--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,12 @@ jobs:
     - name: debug
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "echo '.discord_bot_token = "${{ secrets.DISCORD_BOT_TOKEN }}" | .discord_server_id = "${{ secrets.DISCORD_SERVER_ID }}" | .database_host = "${{ secrets.DB_HOST }}" | .database_port = ("${{ secrets.DB_PORT }}" | tonumber) | .database_user = "${{ secrets.DB_USER }}" | .database_password = "${{ secrets.DB_PASSWORD }}" | .database_name = "${{ secrets.DB_NAME }}"' > ~/test.txt && exit"
     - name: replace config variables
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "jq '.discord_bot_token = "${{ secrets.DISCORD_BOT_TOKEN }}" | .discord_server_id = "${{ secrets.DISCORD_SERVER_ID }}" | .database_host = "${{ secrets.DB_HOST }}" | .database_port = ("${{ secrets.DB_PORT }}" | tonumber) | .database_user = "${{ secrets.DB_USER }}" | .database_password = "${{ secrets.DB_PASSWORD }}" | .database_name = "${{ secrets.DB_NAME }}"' ${{ secrets.WORK_DIR }}/bot/config.json && exit"
+      run: |
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "jq \
+        --arg DISCORD_BOT_TOKEN "${{ secrets.DISCORD_BOT_TOKEN }}" \
+        --arg DISCORD_SERVER_ID "${{ secrets.DISCORD_SERVER_ID }}" \
+        '.discord_bot_token = ($DISCORD_BOT_TOKEN) | .discord_server_id = ($DISCORD_SERVER_ID) \
+        ${{ secrets.WORK_DIR }}/bot/config.json \
+        && exit"
     - name: cleanup
       run: rm -rf ~/.ssh
