--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.2</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>1.11</source>
+          <target>1.11</target>
         </configuration>
       </plugin>
       <plugin>
@@ -77,9 +77,15 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency> 
+		 <groupId>org.junit.jupiter</groupId>  
+		 <artifactId>junit-jupiter-api</artifactId>  
+		 <version>5.9.0</version>  
+		 <scope>test</scope>  
+	 </dependency>
     <dependency>
       <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
